[project]
name = "xai-requests"
version = "0.1.0"
description = "Xircuits component library for sending requests"
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "MIT"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-requests"
keywords = ["xircuits", "requests"]

dependencies = [
    "requests==2.32.3"
]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "agent_example.xircuits"
requirements_path = "requirements.txt"
